<resources>
    <string name="app_name">agent_app_android</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="previous">previous</string>
    <string name="account_login">Account Login</string>
    <string name="email">Enter email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="want_to_be_an_agent">Want to be an agent?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Surname</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter surname</string>
    <string name="already_an_agent">Already an agent?</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter password</string>
    <string name="phone_number">Phone Number</string>
    <string name="state_of_residence">State of residence</string>
    <string name="select_state_of_residence">Select state of residence</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="task_desc">Slide right to accept a \ntask or slide left to decline</string>
    <string name="task_title">Easily manage Tasks</string>
    <string name="congratulations_your_identity_verification_was_successful">Congratulations, your identity verification was\n successful</string>
    <string name="identity_verification_successful">Identity Verification Request Sent</string>
    <string name="identity_verification_failed">Identity Verification Request Failed</string>
    <string name="ok_btn">OK</string>
    <string name="failed_text">Sorry, your identity verification failed. You\n have <b>2 </b>more chances</string>
    <string name="try_again">Try Again</string>
    <string name="success">success</string>
    <string name="failed">Failed</string>
    <string name="type_of_building">Type of building</string>
    <string name="town_house">Town house</string>
    <string name="terraced_house">Terraced house</string>
    <string name="semi_detatched_house">Semi-detached house</string>
    <string name="detatched_house">Detached house</string>
    <string name="bungalow">Bungalow</string>
    <string name="duplex">Duplex</string>
    <string name="mansion">Mansion</string>
    <string name="penthouse">Penthouse</string>
    <string name="container_house">Container house</string>
    <string name="one_room_face_me_i_face_you">One-room (face-me-I-face-you)</string>
    <string name="gatekeeper">Gatekeeper</string>
    <string name="nearby_retailer">Near-by retailer</string>
    <string name="landlord_landlady">Landlord/Landlady</string>
    <string name="confirmed_by_who">Confirmed by who?</string>
    <string name="security_personnel">Security personnel</string>
</resources>