<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/select_period_bg"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/drawer_handle"
        android:layout_width="50dp"
        android:layout_height="4dp"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/handleColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/building_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/br_sonoma_regular"
        android:textColor="@color/colorOnBoardingIndicatorActive1"
        android:text="@string/type_of_building"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drawer_handle" />

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/town_house_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/building_type_text"
        android:padding="16dp"
        android:layout_marginTop="48dp"
        android:button="@drawable/radio_btn_selector"
        android:text="@string/town_house"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="@color/black_varient"
        android:fontFamily="@font/br_sonoma_regular"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/terraced_house_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:button="@drawable/radio_btn_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/town_house_btn"
        android:text="@string/terraced_house"
        android:textSize="14sp"
        android:textColor="@color/black_varient"
        android:fontFamily="@font/br_sonoma_regular"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/semi_house_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terraced_house_btn"
        android:padding="16dp"
        android:layout_marginTop="4dp"
        android:button="@drawable/radio_btn_selector"
        android:text="@string/semi_detatched_house"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="@color/black_varient"
        android:fontFamily="@font/br_sonoma_regular"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/detatched_house_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:button="@drawable/radio_btn_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/semi_house_btn"
        android:text="@string/detatched_house"
        android:textSize="14sp"
        android:textColor="@color/black_varient"
        android:fontFamily="@font/br_sonoma_regular"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/bungalow_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:button="@drawable/radio_btn_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detatched_house_btn"
        android:text="@string/bungalow"
        android:textSize="14sp"
        android:textColor="@color/black_varient"
        android:fontFamily="@font/br_sonoma_regular"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/duplex_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bungalow_btn"
        android:padding="16dp"
        android:layout_marginTop="4dp"
        android:button="@drawable/radio_btn_selector"
        android:text="@string/duplex"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="@color/black_varient"
        android:fontFamily="@font/br_sonoma_regular"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/mansion_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:button="@drawable/radio_btn_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duplex_btn"
        android:text="@string/mansion"
        android:textSize="14sp"
        android:textColor="@color/black_varient"
        android:fontFamily="@font/br_sonoma_regular"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/penthouse_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mansion_btn"
        android:padding="16dp"
        android:layout_marginTop="4dp"
        android:button="@drawable/radio_btn_selector"
        android:text="@string/penthouse"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="@color/black_varient"
        android:fontFamily="@font/br_sonoma_regular"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/container_house_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:button="@drawable/radio_btn_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/penthouse_btn"
        android:text="@string/container_house"
        android:textSize="14sp"
        android:textColor="@color/black_varient"
        android:fontFamily="@font/br_sonoma_regular"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/one_room_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_house_btn"
        android:padding="16dp"
        android:layout_marginTop="4dp"
        android:button="@drawable/radio_btn_selector"
        android:text="@string/one_room_face_me_i_face_you"
        android:checked="false"
        android:textSize="14sp"
        android:textColor="@color/black_varient"
        android:fontFamily="@font/br_sonoma_regular"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>