<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.home.verification.VerificationResponseFragment">


    <ImageView
        android:id="@+id/success_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:src="@drawable/ic_verification_successful"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/success" />

    <TextView
        android:id="@+id/text_select_identity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/identity_verification_successful"
        android:textColor="@color/black_varient"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/success_img"
        app:layout_constraintTop_toBottomOf="@+id/success_img"
        app:layout_constraintEnd_toEndOf="@+id/success_img"/>

    <TextView
        android:id="@+id/text_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/br_sonoma_regular"
        android:text="@string/congratulations_your_identity_verification_was_successful"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_select_identity" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/br_sonoma_regular"
        android:text="@string/ok_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_success"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>