<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/stroke"
        app:layout_constraintEnd_toEndOf="@+id/textTitle"
        app:layout_constraintStart_toStartOf="@+id/textTitle"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageOnBoarding"
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.17"
        app:srcCompat="@drawable/ic_vp_image_one"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/br_sonoma_regular"
        android:gravity="center"
        android:text="@string/task_desc"
        android:textColor="@color/colorTextPrimary"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageOnBoarding" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/task_title"
        android:textColor="@color/colorTextSecondary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="@font/br_sonoma_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="30dp"
        android:text="@string/skip"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorTextPrimary"
        android:fontFamily="@font/br_sonoma_regular"
        app:layout_constraintBottom_toTopOf="@+id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toEndOf="@+id/onBoardBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/onBoardBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_img_btn"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/previous"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_next_button"
        tools:ignore="TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/onBoardProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:indeterminateOnly="false"
        android:progress="25"
        android:progressDrawable="@drawable/button_onboarding_indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textDesc"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/textDesc"
        app:layout_constraintTop_toBottomOf="@+id/textDesc" />

    <Button
        android:id="@+id/onBoardNextButton"
        android:layout_width="94dp"
        android:layout_height="88dp"
        android:height="80dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/br_sonoma_regular"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorTextPrimary"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/onBoardProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/onBoardProgressBar"
        app:layout_constraintStart_toStartOf="@+id/onBoardProgressBar"
        app:layout_constraintTop_toTopOf="@+id/onBoardProgressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>